2009-06-19  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* testsuite/test_unix.ml: created

	* src/core/extlib/extPervasives.ml*: [printer_exn] added

	* src/core/extlib/bitSet.ml: [print] now uses [8*len] and not [len]

	* src/core/extlib/bitSet.ml: [diff] now handles all bits of both [a] and [b]

2009-06-13  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* Makefile.in: [BUILD_DOC] now initialized from [@BUILD_DOC@]

	* Makefile.in: [all] now forces [install-doc] only if [BUILD_DOC] is [yes]

	* Makefile.in: [install-doc] now untouched by [BUILD_DOC]
	
	* testsuite/test_file.ml: [write] now actually uses [buf]

	* testsuite/test_file.ml: [test_append], [test_noappend] added 

	* testsuite/test_file.ml: now using newstyle print

	* src/core/extlib/file.ml: [out_chan_mode] now adds [1trunc] if unspecified

	* src/main/nothreads/batteries.ml: added [Path]

2009-04-21  Hezekiah M. Carty  <hcarty@atmos.umd.edu>

	* examples/tools/gunzip.ml,
	* examples/tools/gzip.ml,
	* src/main/nothreads/batteries.ml,
	* src/main/threads/batteries.ml,
	* doc/development/NOTES: Rename module GZip -> Gzip

	* examples/tools/gnuzip.ml: Renamed from gzip.ml to avoid circular

2009-04-21  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
	
	* Makefile.in: added missing \

2009-04-20  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extInt.mli: Pagination, comments.

2009-04-19  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/ocamlbuild: Now using byte-plugin

	* Makefile.in: [install] now doesn't copy ocaml*

2009-04-18  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* testsuite/test_string.ml: [test_1] now uses final "?" for list comprehension

	* testsuite/main.ml: [Test_pmap.test_2] added

	* src/core/extlib/multiPMap.ml: patch by turpin applied

	* src/core/extlib/multiPMap.ml: flattened

	* testsuite/test_pmap.ml: [test_2] added
